OPIK-3779 refactor: extract query to constant